--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul class="category-list"></ul>
-    <button class="get-button" type="button">get categories</button>
-    <button class="open-modal" type="button">open modal</button>
+    <button class="login-button" type="button">login</button>
+    <button class="logout-button" type="button">logout</button>
+
+    <button class="register-button" type="button">register</button>
+
+    <!-- <button class="open-modal" type="button">open modal</button> -->
     <div class="modal-root"></div>
-    <script src="./index.js"> </script>
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
