--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="dropdown-auth">
-      <div class="modal-auth">
-        <form class="form-auth">
-          <input class="input-auth" type="text" placeholder="NAME" />
-          <input class="input-auth" type="email" placeholder="EMAIL" />
-          <input class="input-auth" type="password" placeholder="PASSWORD" />
-        </form>
-      </div>
-    </div>
+    
 
     <ul class="category-list"></ul>
-    <button class="login-button" type="button">login</button>
+    <!-- <button class="login-button" type="button">login</button>
     <button class="logout-button" type="button">logout</button>
 
-    <button class="register-button" type="button">register</button>
-    <button class="modal-login-button" type="button">show modal</button>
+    <button class="register-button" type="button">register</button> -->
+    <button class="modal-auth-button" type="button">show auth</button>
 
     <!-- <button class="open-modal" type="button">open modal</button> -->
+
     <div class="modal-root"></div>
+    <div class="auth-modal-root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
