--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button class="logout-button" type="button">logout</button>
 
     <button class="register-button" type="button">register</button> -->
-    <button class="modal-auth-button" type="button">show auth</button>
+    <button class="modal-auth-button" type="button" value="somevalue">show auth</button>
 
     <!-- <button class="open-modal" type="button">open modal</button> -->
 
