--- a/index.html
+++ b/index.html
@@ -8,18 +8,8 @@
   </head>
   <body>
     
+    <button type="button" class="mybutton">click</button>
 
-    <ul class="category-list"></ul>
-    <!-- <button class="login-button" type="button">login</button>
-    <button class="logout-button" type="button">logout</button>
-
-    <button class="register-button" type="button">register</button> -->
-    <button class="modal-auth-button" type="button" value="somevalue">show auth</button>
-
-    <!-- <button class="open-modal" type="button">open modal</button> -->
-
-    <div class="modal-root"></div>
-    <div class="auth-modal-root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
